--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Certified Tech Developer</title>
+    <title>CTD-Front End</title>
 </head>
 <body>
-    <h1>CTD - Front End</h1>
-    <a href="FrontEnd/">Front End</a>
+    <h1>Tareas de Front End</h1>    
 </body>
 </html>
