--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
-									<a href="Giulianni.github.io/FrontEnd/Lemon_pie_html/index.html">
+									<a href="./FrontEnd/Lemon_pie_html/index.html">
 										<h2>Lemon Pie</h2>
 										<div class="content">
 											<p>First project with HTML.</p>
@@ -55,7 +55,7 @@
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
 									</span>
-									<a href="./Giulianni.github.io/FrontEnd/Lemon-Pie-Personalizado/html/index.html">
+									<a href="./FrontEnd/Lemon-Pie-Personalizado/html/index.html">
 										<h2>Lemon Pie CSS</h2>
 										<div class="content">
 											<p>Second project with styles.</p>
@@ -66,7 +66,7 @@
 									<span class="image">
 										<img src="images/pic05.jpg" alt="" />
 									</span>
-									<a href="./Giulianni.github.io/FrontEnd/Batman-CV/index.html">
+									<a href="./FrontEnd/Batman-CV/index.html">
 										<h2>I'm Batman</h2>
 										<div class="content">
 											<p>If Batman had a curriculum...</p>
@@ -77,7 +77,7 @@
 									<span class="image">
 										<img src="images/pic06.jpg" alt="" />
 									</span>
-									<a href="./Giulianni.github.io/FrontEnd/animaciones/en_clase12/index.html">
+									<a href="./FrontEnd/animaciones/en_clase12/index.html">
 										<h2>Animation</h2>
 										<div class="content">
 											<p>Producing basic animation.</p>
@@ -88,7 +88,7 @@
 									<span class="image">
 										<img src="images/pic07.jpg" alt="" />
 									</span>
-									<a href="./Giulianni.github.io/FrontEnd/Maquetado-cajasFlex/clase14/index.html">
+									<a href="./FrontEnd/Maquetado-cajasFlex/clase14/index.html">
 										<h2>Pizza&Front</h2>
 										<div class="content">
 											<p>Using Flex box.</p>
@@ -99,7 +99,7 @@
 									<span class="image">
 										<img src="images/pic08.jpg" alt="" />
 									</span>
-									<a href="./Giulianni.github.io/FrontEnd/cardsHeroes/html/index.html">
+									<a href="./FrontEnd/cardsHeroes/html/index.html">
 										<h2>SuperHeroes Cards</h2>
 										<div class="content">
 											<p>Choose your favorite Hero!</p>
@@ -110,10 +110,10 @@
 									<span class="image">
 										<img src="images/pic09.jpg" alt="" />
 									</span>
-									<a href="./Giulianni.github.io/FrontEnd/clase13/index.html">
+									<a href="./FrontEnd/clase13/index.html">
 										<h2>Travel</h2>
 										<div class="content">
-											<p>Most beautiful places in Latin America</p>
+											<p>Most beautiful places in Latin America examples.</p>
 										</div>
 									</a>
 								</article>
