--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 							<header>
 								<h1>I'm Giulianni, welcome to my portfolio.</h1>
 								<p>Studying Certified Tech Developer in Digital House.</p>
-								<p></p>
+								<p>That's Front End I...</p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
