update Lemon pie html

--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
 							<header>
 								<h1>I'm Giulianni, welcome to my portfolio.</h1>
 								<p>Studying Certified Tech Developer in Digital House.</p>
-								<p>That's Front End I...</p>
+								<p>That's Front End I:</p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
-									<a href="./FrontEnd/Lemon_pie_html/html/index.html">
+									<a href="./FrontEnd/LemonPie_html/index.html">
 										<h2>Lemon Pie</h2>
 										<div class="content">
 											<p>First project with HTML.</p>
